@@ -1,5 +1,12 @@
 2008-09-13  Jörgen Scheibengruber  <mfcn@gmx.de>
 
+	* src/gui.c (main):
+	* src/prefs.c (add_button_clicked_cb), (del_button_clicked_cb),
+	(name_cell_edited_cb):
+	Don't update menus while main-view and tray-icon are not visible yet
+
+2008-09-13  Jörgen Scheibengruber  <mfcn@gmx.de>
+
 	* configure.in:
 	* src/Makefile.am:
 
